@@ -1,3 +1,8 @@
+2008-05-30  Jaroslav Hajek <highegg@gmail.com>
+
+	* src/nllgpr.f, src/nl0gpr.f: add normalizing constant to obtain the
+	true negative log likelihood.
+
 2008-05-15  Jaroslav Hajek <highegg@gmail.com>
 
 	* inst/demo_octgpr.m: add support for non-interactive running.
